--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,5 +2,6 @@ browser.id=Chrome
 copy.src.on.open=false
 hostname=localhost
 port=8000
+router=index.php
 run.as=INTERNAL
 url=http://localhost:8000/
